Set Vue Js Production

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<h2><a target="_blank" href="https://fb.com/mehedimi">@Mehedi Hasan</a></h2>
 		</div>
 	</div>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.4.2/vue.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.4.2/vue.min.js"></script>
 	<script>
 		var app = new Vue({
 			el : '#app',
